[package]
name = "passwordmgr"
version = "0.1.0"
authors = ["application-services <application-services@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moz_task = { path = "../../../../xpcom/rust/moz_task" }
nserror = { path = "../../../../xpcom/rust/nserror" }
nsstring = { path = "../../../../xpcom/rust/nsstring" }
xpcom = { path = "../../../../xpcom/rust/xpcom" }
cstr = "0.1"
uuid = { version = "0.6", features = ["v4"] }

[dependencies.thin-vec]
version = "0.1.0"
features = ["gecko-ffi"]

[dependencies.logins]
git = "https://github.com/mozilla/application-services.git"
branch = "no-sqlcipher-logins"
features = []
